# moveit_ws

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh
devel/.private/robotic_arm/: .catkin  local_setup.sh  setup.sh
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  robotic_arm.pc
src/robotic_arm/: CMakeLists.txt  package.xml
src/robotic_arm/config/: joint_trajectory_controller.yaml
src/robotic_arm/launch/: arm_urdf .launch  display.launch  gazebo.launch
src/robotic_arm/meshes/: link_4.STL  link_6.STL
src/robotic_arm/urdf/: robotic_arm.csv  robotic_arm.urdf
src/yaren_communication/: CMakeLists.txt  package.xml
src/yaren_communication/launch/: yaren_communication.launch
src/yaren_communication/src/: communication.py  motor_classes.py  read_joint_configuration.py  (+1 more)
src/yaren_description/: CMakeLists.txt  package.xml
src/yaren_description/config/: configuration.rviz  joint_names_yaren_description.yaml  ros_controllers.yaml
src/yaren_description/launch/: display.launch  display1.launch  gazebo.launch  gazebo1.launch  ros_controllers.launch
src/yaren_description/meshes/: Link_1.STL  Link_10.STL  Link_11.STL  Link_2.STL  Link_3.STL  Link_4.STL  Link_5.STL  Link_6.STL  Link_7.STL  Link_9.STL  base_link.STL
src/yaren_description/urdf/: yaren_description.csv  yaren_description.urdf
src/yaren_master/: CMakeLists.txt  package.xml
(+14 files in other folders)
